# agentflow

./: .gitignore  AGENTFLOW_ZH.md  AGENTS.md  README.md  agent.go  agent_test.go  chain.go  chain_test.go  context.go  context_test.go  flow.go  flow_test.go  go.mod  llm.go  llm_test.go  pyproject.toml  tool.go  tool_test.go
app/: __init__.py  cli.py  config.py  constants.py  db.py  main.py  repository.py
app/api/: __init__.py  routes_board.py
app/domain/: __init__.py  state_machine.py
app/services/: codex_runner.py  coding_agent_runner.py  gh_client.py  scheduler.py  sync_service.py  worker_service.py  worktree_cleanup_service.py
config/: agentflow.example.yaml
docs/plans/: 2026-03-23-agentflow-v1-single-repo.md  2026-03-23-cli-board-design.md  2026-03-23-cli-board.md  2026-03-23-codex-prompt-templates-design.md  2026-03-23-codex-prompt-templates.md  2026-03-23-coding-agent-runner-design.md  2026-03-23-coding-agent-runner.md  2026-03-23-github-state-sync-design.md  2026-03-23-github-state-sync.md  2026-03-23-issue-linked-pr-design.md  2026-03-23-issue-linked-pr.md  2026-03-23-parallel-scheduler-recovery-design.md  2026-03-23-parallel-scheduler-recovery.md  2026-03-23-pr-review-latency-design.md  2026-03-23-pr-review-latency.md  2026-03-23-runs-inspect-and-async-scheduler-design.md  2026-03-23-runs-inspect-and-async-scheduler.md  2026-03-23-startup-logging-and-immediate-tick-design.md  2026-03-23-startup-logging-and-immediate-tick.md  (+14 more)
migrations/: 001_init.sql
prompts/: fix.md  implement.md  implement_pr_followup.md  review.md
tests/: conftest.py
(+17 files in other folders)
