[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentflow"
version = "0.1.0"
description = "Label-driven GitHub task agent with local coding agent execution"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.29,<1",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2,<3",
  "apscheduler>=3.10,<4",
  "jinja2>=3.1,<4",
  "pyyaml>=6,<7"
]

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
